--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "chart": "^0.1.2",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
